...
                        style = MaterialTheme.typography.bodyMedium)
                    Icon(
                        Icons.AutoMirrored.Filled.KeyboardArrowRight,
                        null,
                        tint = MaterialTheme.colorScheme.onBackground,
                        modifier =
                            Modifier.clickable { showPopup.value = true }.testTag("TagsButton"))
                  }

              Spacer(modifier = Modifier.height(screenHeight / 80))

              if (isPrivate) {
                Row(
...
            expanded = expanded,
            onDismissRequest = { expanded = false },
            modifier =
                Modifier.fillMaxWidth()
                    .background(MaterialTheme.colorScheme.background)
                    .wrapContentHeight()
                    .testTag("DropdownMenu"),
        ) {
          locationSuggestions.value.forEachIndexed { i, location ->
            DropdownMenuItem(
                modifier = Modifier.wrapContentSize(),
                text = { Text(location.name) },
                onClick = {
...
