...
          FlowRow(
              modifier =
                  Modifier.fillMaxSize()
                      .verticalScroll(rememberScrollState())
                      .weight(1f, fill = false)
                      .padding(start = 15.dp)
                      .testTag("TagList")) {
                for (tag in Tag.entries) {
                  if (tags.value.contains(tag.tagName)) {
                    Button(
                        onClick = { tags.value = tags.value.minus(tag.tagName) },
                        modifier =
                            Modifier.padding(end = 15.dp, bottom = 5.dp)
...
