...
    Scaffold(
        topBar = {
          Row(verticalAlignment = Alignment.CenterVertically) {
            IconButton(onClick = { nav.goBack() }) {
              Icon(
                  Icons.AutoMirrored.Filled.ArrowBack,
                  contentDescription = "Go back",
                  tint = MaterialTheme.colorScheme.onBackground)
            }
            Spacer(modifier = Modifier.weight(1f))
            Text(
                text = "Done",
                color = MaterialTheme.colorScheme.onBackground,
...
                            androidx.compose.ui.graphics.painter.BitmapPainter(imageBitmap!!)
                          } else if (!profilePictureUrl.isNullOrEmpty()) {
                            rememberAsyncImagePainter(profilePictureUrl)
                          } else {
                            painterResource(id = R.drawable.gomeet_logo)
                          },
                      contentDescription = "Event picture",
                      modifier =
                          Modifier.padding(start = 15.dp, end = 15.dp, top = 30.dp, bottom = 15.dp)
                              .fillMaxWidth()
                              .height(200.dp)
                              .clickable { imagePickerLauncher.launch("image/*") }
                              .clip(RoundedCornerShape(12.dp))
...
