...
                                  .width(101.dp)
                                  .height(101.dp)
                                  .clickable { imagePickerLauncher.launch("image/*") }
                                  .clip(CircleShape)
                                  .background(color = MaterialTheme.colorScheme.background)
                                  .align(Alignment.CenterHorizontally)
                                  .testTag("Profile Picture"),
                          contentScale = ContentScale.Crop)

                      Spacer(modifier = Modifier.size(16.dp))

                      TextField(
                          value = firstName.value,
...
                            Icon(
                                Icons.AutoMirrored.Filled.KeyboardArrowRight,
                                null,
                                tint = MaterialTheme.colorScheme.onBackground,
                                modifier =
                                    Modifier.clickable { showPopup.value = true }
                                        .testTag("EditTagsButton"))
                          }
                    }
              }
          false -> LoadingText()
        }

...
